# sync-fed-contracts

./: .env.prod.example  .env.test.example  .gitignore  LICENSE  README.md  check-now.py  check_csv.ipynb  cimar--scratch.ipynb  export-fed-contracts.py  export_fed_contracts.py  extract-to-csvs.ipynb  fetch-fed-contracts.py  fetch_fed_contracts.py  filter_most_recent.py  highlighted_columns.md  pyproject.toml  requirements-arm64.txt  requirements.txt  run.py  stucka-testing.ipynb  summarize.ipynb  sync-fed-contracts.py  unauthorized.py  utils.py
dashboard/: README.md  app.py
disused/: extract-to-csvs-rosie.ipynb  extract-to-csvs.ipynb  filter_for_dashboard.py  gcs-test.ipynb  kill-loose-json.ipynb  testing.py  testing2.py  testing3.py
