[project]
name = "sync-fed-contracts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "pandas>=2.3.3",
    "streamlit>=1.50.0",
    "google-cloud-storage>=3.4.0",
    "fpds>=1.5.0",
    "python-dotenv>=1.1.1",
]
