[project]
name = "sync-fed-contracts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "fpds>=1.5.0",
    "google-cloud-storage>=3.2.0",
    "pandas>=2.3.0",
    "streamlit>=1.45.1",
    "tqdm>=v4.67.3",
]
